version 2013-10-25
      Plugin converted from 2.10.x version

version 2013-10-18
      Initial commit