@@ -11,7 +11,7 @@ The page is added to the System menu.
 
 Requires php version 5.2 or later.
 
-Requires the Common Plugin to be installed. 
+Requires the Common Plugin version 2015-03-23 or later to be installed. You should install or upgrade to the latest version.
 
 See <https://github.com/bramley/phplist-plugin-common>
 
@@ -46,5 +46,6 @@ This plugin is free but if you install and find it useful then a donation to sup
 ## Version history ##
 
     version     Description
+    2015-03-23  Change to autoload approach
     2013-10-25  Added to GitHub
     2013-10-18  Initial version for phplist 3.0 converted from 2.10 version
