@@ -15,13 +15,9 @@
  * This is the entry code invoked by phplist
  */
 
-$commonPlugin = isset($plugins['CommonPlugin']) ? $plugins['CommonPlugin'] : null;
-
-if (!($commonPlugin && $commonPlugin->enabled)) {
+if (!(phplistPlugin::isEnabled('CommonPlugin'))) {
     echo "phplist-plugin-common must be installed and enabled to use this plugin";
     return;
 }
-
-include $commonPlugin->coderoot . 'Autoloader.php';
 
 CommonPlugin_Main::run();
